--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -6,6 +6,9 @@
     .accordion-item {
       background: var(--color-blue-light2);
       border-color: var(--color-border-light);
+      border: 1px solid rgba(0,0,0,.125);
+      border-radius: 8px;
+      overflow: hidden;
 
       &:first-of-type {
         border-top-left-radius: 8px;
@@ -15,6 +18,15 @@
       &:last-of-type {
         border-bottom-right-radius: 8px;
         border-bottom-left-radius: 8px;
+      }
+
+      .accordion-header {
+        .accordion-button {
+          border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+          &.collapsed {
+            border-bottom: 0;
+          }
+        }
       }
 
       &.accordion-blue {
