--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -137,7 +137,8 @@ text-align: left;
   background: unset;
   // border: none;
   height: auto;
-  border: 1px solid #E6E6E6
+  border: 1px solid #E6E6E6;
+  box-shadow: none;
 }
 .kitchen-carousel.radio-check-switch .radio-switch-state img {
   width: 100%;
@@ -158,10 +159,40 @@ text-align: left;
   margin-top:12px;
 }
 .radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state{
- border: 2px solid #016BBF;
+ border: 1px solid #016BBF;
  background: #EBF5FD;
+ box-shadow: inset 0px 0px 0px 1px #016BBF;
 }
-
+.radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state .icon-on:after {
+  content: "";
+  left: 50%;
+  top: 40%;
+  width: 6px;
+  height: 10px;
+  border: solid var(--color-white);
+  border-width: 0 2px 2px 0;
+  transform: translate(-50%, -50%) rotate(45deg);
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+  -moz-transform: translate(-50%, -50%) rotate(45deg);
+  -ms-transform: translate(-50%, -50%) rotate(45deg);
+}
+.radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state .icon-on {
+  opacity: 1;
+}
+.radio-check-switch.kitchen-carousel .radio-switch-state .icon-on {
+  left: 10px;
+  top: 10px;
+  height: 20px;
+  width: 20px;
+  background: linear-gradient(321.01deg, rgba(103, 166, 217, 0.8) 15.51%, rgba(1, 107, 191, 0.8) 84.12%), #016BBF;
+  border-radius: 4px;
+  opacity: 0;
+}
+.kitchen-carousel.owl-carousel .owl-stage {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
 
 
@@ -194,7 +225,11 @@ h1 {
 .counter__increment, .counter__decrement {
   transition: all 0.4s ease-in-out;
 }
-
+.house_area {
+  border: 1px solid #E6E6E6;
+  padding: 5px;
+  border-radius: 4px;
+}
 .counter {
   position: relative;
   width: 7.7rem;
@@ -224,6 +259,14 @@ h1 {
   font-weight: normal;
   color: #616161;
   text-decoration: none;
+  .fa {
+    line-height: 30px;
+    vertical-align: middle;
+    &::before {
+      line-height: 30px;
+      display: block;
+    }
+  }
 }
 .counter__increment:hover, .counter__increment:active, .counter__increment:focus, .counter__decrement:hover, .counter__decrement:active, .counter__decrement:focus {
   color: #616161;
