--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -154,6 +154,11 @@ text-align: left;
   width: 270px;
   height: 290px;
 }
+.ceiling-carousel.radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state img ,
+.ceiling-carousel.radio-check-switch .radio-switch-state img {
+  width: 100%;
+  height: 240px;
+}
 .kitchen-carousel.radio-check-switch .ins-title{
   position: unset;
   margin-top:12px;
