home insurange rct process design changes and fixed design of jewellry

--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -139,6 +139,7 @@ text-align: left;
   height: auto;
   border: 1px solid #E6E6E6;
   box-shadow: none;
+  background: #fff;
 }
 .kitchen-carousel.radio-check-switch .radio-switch-state img {
   width: 100%;
