--- a/src/scss/component/_dropdown.scss
+++ b/src/scss/component/_dropdown.scss
@@ -92,7 +92,7 @@
         li {
             padding: 0;
             margin: 0;
-
+            width: 100%;
             a {
                 cursor: pointer;
                 display: block;
