--- a/src/assets/css/pages/insurance-type.css
+++ b/src/assets/css/pages/insurance-type.css
@@ -131,6 +131,15 @@
   padding: 15px;
 }
 
+.yes-box {
+  margin: 0 auto;
+}
+@media only screen and (min-width: 600px) {
+  .yes-box {
+    width: 276px;
+  }
+}
+
 .white-box {
   background: var(--color-white);
   border: 1px solid var(--color-border-light);
