--- a/src/scss/pages/client-profile.scss
+++ b/src/scss/pages/client-profile.scss
@@ -483,6 +483,10 @@
   }
 }
 
+.title {
+  color: var(--color-title);
+}
+
 .claim-section {
   .sec-title {
     font-size: 18px;
@@ -639,6 +643,21 @@
 
     &.squar-boxes {
       width: 200px;
+      background: none;
+      border-radius: 0;
+      box-shadow: none;
+      padding: 0;
+
+      .checkbox-control {
+        &:checked ~ .checkbox-label {
+          box-shadow: 0px 20px 30px 0px #ddeefb;
+        }
+      }
+      
+      .radio-custom {
+        height: 30px;
+        background-repeat: no-repeat;
+      }
 
       &.glass-squares {
         img {
@@ -648,8 +667,20 @@
           width: 40px;
         }
       }
+
       img {
         margin-bottom: 10px;
+      }
+
+      .checkbox-label {
+        font-size: 16px !important;
+        color: #2b2b2b;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+        background: #fff;
+        border-radius: 12px;
+        padding: 16px;
       }
     }
   }
@@ -659,6 +690,25 @@
   padding: 16px;
   border-radius: 8px;
 
+  .f-dropdown > span {
+    font-size: 16px;
+    height: 52px;
+    color: var(--color-light-gray);
+  }
+  .form-control {
+    font-size: 16px;
+    height: 52px;
+
+    &::placeholder {
+      color: var(--color-light-gray);
+    }
+  }
+
+  hr {
+    background: #e6e6e6;
+    opacity: 1;
+  }
+
   .doc-card.add-document {
     justify-content: flex-start;
     background: linear-gradient(
@@ -667,13 +717,13 @@
         var(--color-blue-light)
       ),
       linear-gradient(0deg, var(--color-blue-light3), var(--color-blue-light3));
-    padding: 8px;
+    padding: 4px 14px;
     border-radius: 7px;
     position: relative;
 
     & > img {
-      width: 32px;
-      height: 32px;
+      width: 44px;
+      height: 44px;
       -o-object-fit: contain;
       object-fit: contain;
       -o-object-position: center;
@@ -683,6 +733,7 @@
     .doc-title {
       font-weight: 500;
       font-size: 12px;
+      color: black;
     }
 
     input {
@@ -692,6 +743,11 @@
       top: 0;
       left: 0;
     }
+  }
+
+  label.dark-labels {
+    font-size: 18px;
+    color: var(--color-black);
   }
 }
 
